@@ -100,7 +100,7 @@ public class ConnectionConfigManager extends AbstractPreferencesManager implemen
                     }
                     try {
                         log.debug("Creating connection {}:{} ({}) class {}", userName, systemName, manufacturer, className);
-                        XmlAdapter adapter = (XmlAdapter) Class.forName(className).newInstance();
+                        XmlAdapter adapter = (XmlAdapter) Class.forName(className).getDeclaredConstructor().newInstance();
                         ConnectionConfigManagerErrorHandler handler = new ConnectionConfigManagerErrorHandler();
                         adapter.setExceptionHandler(handler);
                         if (!adapter.load(shared, perNode)) {
@@ -112,7 +112,7 @@ public class ConnectionConfigManager extends AbstractPreferencesManager implemen
                         handler.exceptions.forEach((exception) -> {
                             this.addInitializationException(profile, exception);
                         });
-                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | java.lang.reflect.InvocationTargetException ex) {
                         log.error("Unable to create {} for {}", className, shared, ex);
                         String english = Bundle.getMessage(Locale.ENGLISH, "ErrorSingleConnection", userName, systemName); // NOI18N
                         String localized = Bundle.getMessage("ErrorSingleConnection", userName, systemName); // NOI18N
